Corrected nav bar overflow & added css properties to align the text

--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,17 @@ nav {
   max-width: 300px;
   height: 50px;
 }
+/*On small screens, the unordered list in the navigation bar overflows the right side of the screen.
 
+I've fixed this by using Flexbox to wrap the ul content. Then, i've set the following CSS properties to correctly align the text:*/
 nav > ul {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-inline-start: 0;
+  margin-block: 0;
+  height: 100%;
 }
 
 nav > ul > li {
